      GET MIDI_INPUT_DRIVER_PARAMETER INFO
    - fixed possible compilation error when sqlite is not present
    - fixed orphaned pointers when setting maximum voices limit (bug #118)
    - fixed crash when changing the audio output device of a sampler
      channel with loaded instrument and start playing notes
    - fixed endless loop in Engine::SuspendAll() (bug #120)


Version 0.5.1 (6 December 2007)

  * packaging changes:
    - added autoconf checks for pthread library
    - added autoconf check for pthread bug found on certain NPTL-enabled
      glibc versions (see Gentoo bug report #194076)
    - added autoconf checks for MS Windows

  * general changes:
    - bugfix: the thread used by an editor plugin didn't die when the
      editor closed
    - bugfix: Ringbuffer.h: fill_write_space_with_null() did not zero
      out all the space. operator--() did not apply size_mask after
      decrementing the read_ptr. DEFAULT_WRAP_ELEMENTS set to 0 in
      order to avoid problems with the _NonVolatileReader functions.
    - bugfix: Stream.h: added a missing divide by BytesPerSample in
      GetWriteSpace(). Since this function is currently only used in
      the stream's qsort() compare function, it didn't trigger any
      bugs.
    - Resampler.h, Synthesizer.h: cubic interpolation now works in
      24bit mode too. Faster method to read 24bit words on little
      endian machines (x86): replaced 3 byte reads + shifts with a 1
      unaligned 32bit read and shift
    - experimental support for MS Windows (MIDI input via MME, AUDIO
      output via ASIO)
    - made handling of SIGINT signal (Ctrl-C) a bit more robust
    - support for monitoring the total number of active disk streams
      (new LSCP commands: GET TOTAL_STREAM_COUNT,
      SUBSCRIBE TOTAL_STREAM_COUNT, UNSUBSCRIBE TOTAL_STREAM_COUNT)

  * AUDIO driver:
    - added Windows ASIO low latency audio driver

  * MIDI driver:
    - added MME Windows MIDI driver

  * LSCP server: