@@ -156,6 +156,8 @@ Version CVS HEAD (?)
     - fixed crash when changing the audio output device of a sampler
       channel with loaded instrument and start playing notes
     - fixed endless loop in Engine::SuspendAll() (bug #120)
+    - fixed a low-level atomic load function that was broken on 64-bit
+      PowerPC, which probably could cause crashes on that platform
 
 
 Version 0.5.1 (6 December 2007)
